InternexDev_Sandbox/src/objects/LockBoxFieldsConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used for mapping the fields of the web cash object with the webcash batches view (Webcash List which is shown after the loading of the file).</description>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>Field for API Name of the column header</description>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Main object name, the API name belongs to</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>LockBox Fields Configuration</label>
</CustomObject>